--- a/src/index.html
+++ b/src/index.html
@@ -32,36 +32,48 @@
     </div>
 
     <div class="section2">
-        <div class="align"></div>
-        <div class="align"></div>
-        <div class="align"></div>
-        <div class="align2">
-            <h3>Heading 1</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nisi?
-            </p>
-            <a href="">LEARN MORE</a>
+        <div class="m">
+            <div class="align"></div>
+            <div class="align2">
+                <h3>Heading 1</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nisi?
+                </p>
+                <a href="">LEARN MORE</a>
+            </div>
+        </div>
+        <div class="m">
+            <div class="align"></div>
+            <div class="align2">
+                <h3>Heading 2</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nisi?
+                </p><a href="">LEARN MORE</a>
+            </div>
+        </div>
+        <div class="m">
+            <div class="align"></div>
+            <div class="align2">
+                <h3>Heading 3</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nisi?
+                </p><a href="">LEARN MORE</a>
+            </div>
         </div>
 
-        <div class="align2">
-            <h3>Heading 2</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nisi?
-            </p><a href="">LEARN MORE</a>
-        </div>
-        <div class="align2">
-            <h3>Heading 3</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nisi?
-            </p><a href="">LEARN MORE</a>
-        </div>
+
+
+
+
+
+
 
     </div>
     </div>
     <div class="last">
         <h3 class="shift">
             Subscribe Us
-            <input type="search" name="" id="" placeholder="Text box" /><button class="c"> 
+            <input type="search" name="" id="" placeholder="Text box" /><button class="c">
                 Submit
             </button>
         </h3>
